--- a/ASPCoreWithAngular/ClientApp/package.json
+++ b/ASPCoreWithAngular/ClientApp/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.1.3",
+    "@angular/animations": "^12.1.3",
     "@angular/cdk": "^12.1.3",
     "@angular/common": "12.1.3",
     "@angular/compiler": "12.1.3",
@@ -26,12 +26,14 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@nguniversal/express-engine": "^12.1.0",
     "@nguniversal/module-map-ngfactory-loader": "7.1.0",
+    "angular-material": "^1.2.3",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "chart": "^0.1.2",
     "chart.js": "^2.9.3",
     "core-js": "^2.6.5",
     "jquery": "^3.6.0",
+    "ngx-toastr": "^14.0.0",
     "oidc-client": "^1.6.1",
     "popper.js": "^1.14.3",
     "rxjs": "^6.4.0",
