--- a/ASPCoreWithAngular/ClientApp/package.json
+++ b/ASPCoreWithAngular/ClientApp/package.json
@@ -30,9 +30,10 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "chart": "^0.1.2",
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.9.4",
     "core-js": "^2.6.5",
     "jquery": "^3.6.0",
+    "ng2-charts": "^2.4.3",
     "ngx-toastr": "^14.0.0",
     "oidc-client": "^1.6.1",
     "popper.js": "^1.14.3",
