--- a/ASPCoreWithAngular/ClientApp/package.json
+++ b/ASPCoreWithAngular/ClientApp/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@nguniversal/express-engine": "^12.1.0",
     "@nguniversal/module-map-ngfactory-loader": "7.1.0",
+    "angular-datatables": "^12.0.0",
     "angular-material": "^1.2.3",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
