--- a/ASPCoreWithAngular/ClientApp/tsconfig.json
+++ b/ASPCoreWithAngular/ClientApp/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compileOnSave": false,
+  "skipLibCheck":true,
   "compilerOptions": {
     "baseUrl": "./",
     "downlevelIteration": true,
@@ -10,13 +11,14 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es2015",
+    "target": "ES2022",
     "typeRoots": [
       "node_modules/@types"
     ],
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "useDefineForClassFields": false
   }
 }
