fixed minor issue

--- a/ASPCoreWithAngular/ClientApp/tsconfig.json
+++ b/ASPCoreWithAngular/ClientApp/tsconfig.json
@@ -1,6 +1,6 @@
 {
-  "compileOnSave": false,
-  "skipLibCheck":true,
+  "compileOnSave": true,
+  "skipLibCheck": true,
   "compilerOptions": {
     "baseUrl": "./",
     "downlevelIteration": true,
